<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/noteHolder"
        android:layout_width="175dp"
        android:layout_height="150dp"
        app:cardUseCompatPadding="true"
        android:layout_marginBottom="6dp"
        app:cardElevation="3dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/title"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:layout_alignParentTop="true"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/black"
                android:layout_below="@id/tvNoteTitle" />

            <TextView
                android:id="@+id/tvContentBrief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/brief_content_of_note"
                android:textColor="@color/textColor"
                android:layout_below="@+id/divider"
                android:layout_above="@id/tvCreateDate"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvCreateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>