<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/noteBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.thd.notes.activity.CreateNoteActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:fitsSystemWindows="true">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            app:titleTextColor="#ffffff"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="snap"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/tvCreateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>
            <GridView
                android:id="@+id/gvImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3"/>
            <LinearLayout
                android:id="@+id/datePicker"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" >
                <ImageButton
                    android:id="@+id/ibPick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_alarm_black_24dp"
                    android:background="@android:color/transparent"
                    android:onClick="setAlarm"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:text="@string/select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="pickDate"
                    android:visibility="invisible"
                    android:textColor="#000000"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:onClick="pickTime"
                    android:textColor="#000000"
                    android:text="@string/select_time"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/cancelAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cancel_24dp"
                    android:background="@android:color/transparent"
                    android:onClick="cancelAlarm"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/cancel"
                    android:visibility="invisible"/>
            </LinearLayout>
            <EditText
                android:id="@+id/etNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNoteContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
